Bug 104139 - UI: OpenGL Unreadable Menus have black text on black background
Summary: UI: OpenGL Unreadable Menus have black text on black background
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All All
: high normal
Assignee: David Tardon
URL:
Whiteboard: target:5.4.0 target:5.3.0.1
Keywords: bibisected, bisected, regression
: 104352 104358 104525 (view as bug list)
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-11-24 10:28 UTC by Luke
Modified: 2016-12-22 15:56 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2016-11-24 10:28:38 UTC
Steps to reproduce:
1. Open recent build of 5.3 and OpenGL enabled.
2. Click on File
3. Move up to help, move back down

Expected results:
Menus open and close as you move up and down

Actual results:
Menus are unreadable, black on black

Disabling OpenGL fixes the issue.

I bibisected this issue down to:

https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=+f6391d9696bfa7485bf785ac81edef4d5441e232..c64b8ffe851d3320a15071fa4bc4b0f12e9939d5
Comment 1 Aron Budea 2016-11-24 13:49:23 UTC
Thanks for opening the bug report and bibisecting it.

I reported this issue here (turns out it was unrelated to bug 103820): https://bugs.documentfoundation.org/show_bug.cgi?id=103820#c4

Still reproduced in 5.3beta1 / Windows 7.
Comment 2 Aron Budea 2016-11-25 16:17:42 UTC
Undoing this commit gets rid of the issue:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=7983c946229d580ec825edbde765381035ae02f6
"start with a defined state"

Adding Cc: to David Tardon.
Comment 3 David Tardon 2016-11-28 16:28:55 UTC
I cannot reproduce this, but I have reverted a part of the patch, which should hopefully fix the problem.
Comment 4 Commit Notification 2016-11-28 16:29:36 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=83288089d5efd2cd1d5c76b05a4ba3f782641e88

tdf#104139 keep the current OpenGL state

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Luke 2016-11-28 22:28:15 UTC
David, 
Thank you! This fixed the menu issue. It also appeared to fix a regression with the slideshow where the first side would appear behind the main Impress app. 

I could reproduce these issues on both my laptop with Intel HD 5000 and my desktop with a Nvidia 650 in Windows 10. So this may have been a Windows specific bug. 

Thanks for fixing it.

-Luke
Comment 6 Luke 2016-11-28 22:35:01 UTC
Did you mean to leave the    
{

}

In the commit? Also can you please backport this to 5.3?
Comment 7 David Tardon 2016-11-29 08:21:12 UTC
(In reply to Luke from comment #6)
> Did you mean to leave the    
> {
> 
> }
> 
> In the commit?

Of course. The code would be invalid without them.

> Also can you please backport this to 5.3?

Yes, I can. I waited for confirmation that it actually fixes the problem.
Comment 8 Commit Notification 2016-11-29 08:23:27 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b53f04662eb7760bb25bb8c6ae97adef0b3fba1b&h=libreoffice-5-3

tdf#104139 keep the current OpenGL state

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2016-11-29 14:28:49 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=58a6cbfbf309b151b9d1463c734343430f9a1220

tdf#104139 state can't be set as context may not be available

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-11-29 14:30:14 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=959bf134acb2782f4bf2ab299a96581e016ebc3d&h=libreoffice-5-3

tdf#104139 state can't be set as context may not be available

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 V Stuart Foote 2016-12-02 15:56:12 UTC
*** Bug 104358 has been marked as a duplicate of this bug. ***
Comment 12 V Stuart Foote 2016-12-02 15:57:39 UTC
*** Bug 104352 has been marked as a duplicate of this bug. ***
Comment 13 V Stuart Foote 2016-12-22 15:56:34 UTC
*** Bug 104525 has been marked as a duplicate of this bug. ***