tdf#104139 state can't be set as context may not be available

When RenderState is constructed (and all capability states get
constructed) the OpenGL context may not be available yet, so we
just set the state to whatever value (false) and make sure we sync
with the actual state right away when we have OpenGL context set
up and ready.

Change-Id: I65a669ab76c1834775007d62efe3d6ac061d6f21